# zebra-rs

./: .gitignore  CHANGELOG.yaml  Cargo.toml  ChangeLog  EVPN_FIB_MAC_INSTALL_GAP.md  EVPN_L2_FORWARDING_IMPLEMENTATION_PLAN.md  EVPN_L2_MAC_INSTALL_GAP.md  EVPN_RIB_PLAN.md  Makefile  PERFORMANCE_REPORT.md  PHASE_3B_REMOTE_VTEP_IMPLEMENTATION.md  PHASE_4B_MDB_MULTICAST_IMPLEMENTATION.md  README.md  TCP-MD5-AO.md  typescript
bdd/: Cargo.toml  Makefile  allurerc.mjs
bdd/docs/: bgp_addpath_ipv4.md  bgp_addpath_ipv6.md  bgp_afi_safi_policy.md  bgp_allowas_in.md  bgp_as_override.md  bgp_as_path_match.md  bgp_basic_ebgp.md  bgp_basic_ibgp.md  bgp_basic_rr.md  bgp_community.md  bgp_disable_connected_check.md  bgp_ebgp_multihop.md  bgp_ebgp_strip_v6.md  bgp_egress_group_sharded.md  bgp_egress_group_task.md  bgp_enforce_first_as.md  bgp_evpn_ar.md  bgp_evpn_capability.md  bgp_evpn_df_election.md  bgp_evpn_gateway_df.md  bgp_evpn_gateway_reflood.md  bgp_evpn_interas_segmentation.md  bgp_evpn_outpolicy_undef.md  bgp_evpn_segmentation.md  bgp_evpn_smet.md  bgp_evpn_spmsi.md  bgp_evpn_srv6_p2mp.md  bgp_fast_external_failover.md  bgp_gobgpd_etcd.md  bgp_gobgpd_rr.md  bgp_interas_option_a.md  bgp_interas_option_ab.md  bgp_interas_option_b.md  bgp_interas_option_c.md  bgp_ip_transparent.md  bgp_ipv6_over_v4_session.md  bgp_local_as.md  bgp_lu_route_map.md  bgp_mp_reach_ipv4.md  bgp_mup_dual_st.md  (+106 more)
bdd/mup-lab/: README.md  amfcfg.yaml  free-ran-ue-0001-gnb-n3-read-error-crash-fix.patch  gnb.yaml  setup-topo.sh  smfcfg.yaml  teardown-topo.sh  ue.yaml  upf-ports.json  upf.yaml
bdd/scripts/: feature2md.sh
bdd/src/: lib.rs  main.rs  netns.rs  tag_guard.rs
bdd/tests/: cucumber.rs
bdd/tests/data/: topology.list
bdd/tests/features/: bgp_addpath_group.feature  bgp_addpath_ipv4.feature  bgp_addpath_ipv6.feature  bgp_afi_safi_policy.feature  bgp_allowas_in.feature  bgp_as4.feature  bgp_as_override.feature  bgp_as_path_match.feature  bgp_basic_ebgp.feature  bgp_basic_ibgp.feature  bgp_basic_rr.feature  bgp_community.feature  bgp_community_no_export_advertise.feature  bgp_disable_connected_check.feature  bgp_dynamic_nbr_ao.feature  bgp_dynamic_nbr_md5.feature  bgp_dynamic_nbr_policy.feature  bgp_dynamic_neighbors.feature  bgp_ebgp_multihop.feature  bgp_ebgp_strip_v6.feature  bgp_egress_group_sharded.feature  bgp_egress_group_task.feature  bgp_enforce_first_as.feature  bgp_evpn_ar.feature  bgp_evpn_capability.feature  bgp_evpn_df_election.feature  bgp_evpn_es.feature  bgp_evpn_gateway_df.feature  bgp_evpn_gateway_reflood.feature  bgp_evpn_igmp_sync.feature  bgp_evpn_interas_segmentation.feature  bgp_evpn_outpolicy_undef.feature  bgp_evpn_rr_withdraw.feature  bgp_evpn_segmentation.feature  bgp_evpn_smet.feature  bgp_evpn_spmsi.feature  bgp_evpn_srv6_p2mp.feature  bgp_evpn_vpws.feature  bgp_fast_external_failover.feature  bgp_gobgpd_etcd.feature  (+228 more)
bdd/tests/scripts/: asm_recv.py  asm_recv6.py  bgp_mp_reach_send.py  mcast_send.py  mcast_send6.py  mld_join.py  ssm_recv.py  ssm_recv6.py
crates/bfd-packet/: Cargo.toml
crates/bfd-packet/src/: auth.rs  flags.rs  lib.rs  packet.rs  typ.rs
crates/bfd-packet/tests/: roundtrip.rs
crates/bgp-macros/: Cargo.toml
crates/bgp-macros/src/: lib.rs
crates/bgp-packet/: .gitignore  AUDIT.md  CODE_REVIEW_FINDINGS.md  Cargo.toml  Makefile  SECURITY_AUDIT.md
crates/bgp-packet/src/: afi.rs  bgp_attr.rs  bgp_cap.rs  bgp_nexthop.rs  error.rs  label.rs  lib.rs  many.rs  many0.rs  notification.rs  open.rs  packet.rs  parse_be.rs  parser.rs  route_refresh.rs  update.rs  util.rs
crates/bgp-packet/tests/: parser.rs  (+1 more)
crates/isis-macros/: Cargo.toml
crates/isis-packet/: .gitignore  AUDIT.md  Cargo.toml  Makefile  SECURITY_AUDIT.md
crates/nd-packet/: Cargo.toml
crates/ospf-packet/: .gitignore  AUDIT.md  Cargo.toml  Makefile  README.md  SECURITY_AUDIT.md
crates/packet-utils/: Cargo.toml
crates/pim-packet/: Cargo.toml
crates/stamp-packet/: Cargo.toml
offload/bfd-echo-reflector/: Cargo.toml  README.md
tools/bgp-bench/: Cargo.toml  README.md  compare-peer-task.sh
tools/pfcp-inject/: Cargo.toml  README.md
vtyctl/: Cargo.toml  build.rs  z.json
vtyctl/src/: apply.rs  clear.rs  endpoint.rs  main.rs  show.rs
vtyhelper/: Cargo.toml  build.rs
vtyhelper/src/: endpoint.rs  main.rs
zebra/: Cargo.toml
zebra-rs/: Cargo.toml  Makefile  build.rs  tracing.rs
zebra-rs/examples/: tcp_ao_client.rs  tcp_ao_server.rs  tcp_md5_client.rs  tcp_md5_server.rs
zebra-rs/src/: fmt.rs  main.rs  throttle.rs  version.rs
zebra-rs/yang/: config-static.yang  config.yang  configure.yang  dhcp.yang  exec.yang  extension.yang  iana-bgp-types@2023-07-05.yang  ietf-bgp-common-multiprotocol@2023-07-05.yang  ietf-bgp-common-structure@2023-07-05.yang  ietf-bgp-common@2023-07-05.yang  ietf-bgp-neighbor@2023-07-05.yang  ietf-bgp-rib@2023-07-05.yang  ietf-bgp@2023-07-05.yang  ietf-routing-policy@2021-10-11.yang  openconfig-isis-types.yang  vty.yang  zebra-afi-safi.yang  zebra-bgp-afi-knobs.yang  zebra-bgp-allowas-in.yang  zebra-bgp-as-override.yang  zebra-bgp-as-sets-withdraw.yang  zebra-bgp-auth.yang  zebra-bgp-bfd.yang  zebra-bgp-capability.yang  zebra-bgp-clear.yang  zebra-bgp-color-policy.yang  zebra-bgp-dynamic-neighbors.yang  zebra-bgp-enforce-first-as.yang  zebra-bgp-evpn.yang  zebra-bgp-flowspec.yang  zebra-bgp-interface-neighbor.yang  zebra-bgp-local-as.yang  zebra-bgp-lua.yang  zebra-bgp-mup-controller.yang  zebra-bgp-neighbor-group.yang  zebra-bgp-password.yang  zebra-bgp-pic-retention.yang  zebra-bgp-redistribute.yang  zebra-bgp-remove-private-as.yang  zebra-bgp-sharding.yang  (+18 more)
zebra/src/: main.rs
zebra/yang/: config.yang  configure.yang  exec.yang  extension.yang  ietf-bgp-neighbor@2023-07-05.yang  ietf-bgp-policy@2023-07-05.yang  ietf-bgp@2023-07-05.yang  ietf-key-chain@2017-06-15.yang  ietf-netconf-acm@2018-02-14.yang  ietf-tcp@2022-09-11.yang  openconfig-isis-types.yang
zmcp-server/: Cargo.toml  Makefile  README.md  TESTING.md
zmcp-server/src/: client.rs  lib.rs  main.rs
zmcp-server/tests/: debug_connection.rs  integration_tests.rs  test_isis_graph_only.rs
(+2375 files in other folders)
