[workspace]
resolver = "2"
members = [
  "zebra-rs",
  "vtyctl",
  "vtyhelper",
  "crates/bgp-packet",
  "crates/bgp-macros",
  "crates/packet-utils",
  "crates/isis-packet",
  "crates/isis-macros",
  "crates/ospf-packet",
  "crates/ospf-macros",
  "crates/fixedbuf",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.dev>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
clap = { version = "4", features = ["derive"] }
