[workspace]
resolver = "2"
members = [
  "zebra-rs",
  "vtyctl",
  "vtyhelper",
  "crates/bgp-packet",
  "crates/bgp-macros",
  "crates/packet-utils",
  "crates/isis-packet",
  "crates/isis-macros",
  "crates/ospf-packet",
  "crates/ospf-macros",
  "crates/fixedbuf",
  "bdd",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.dev>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
clap = { version = "4", features = ["derive"] }

# Workspace-wide clippy configuration. Crates inherit this via
# `[lints] workspace = true` in their own Cargo.toml.
#
# The lints below are opted out because they conflict with this project's
# established style or are not worth the churn for an existing codebase
# (mostly stylistic preferences, network-protocol naming conventions,
# and explicit-over-implicit choices in packet parsers). Other clippy
# lints remain at their default level so genuine issues still surface.
[workspace.lints.clippy]
# Style — explicit-over-implicit
collapsible_if = "allow"

# Style — references and casts
clone_on_copy = "allow"
needless_borrow = "allow"

# Style — APIs that get used a lot in protocol code
get_first = "allow"
ptr_arg = "allow"

# Naming — networking acronyms (TCP, IP, MD5, ...) are fine as-is
upper_case_acronyms = "allow"

# Async — fire-and-forget tasks are intentional in a few places
let_underscore_future = "allow"

# Structural — refactoring would change public APIs; leave as-is for now.
result_large_err = "allow"
large_enum_variant = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
