[workspace]
resolver = "2"
members = [
  "zebra-rs",
  "vtyctl",
  "vtyhelper",
  "vtypam",
  "crates/bgp-packet",
  "crates/bgp-macros",
  "crates/packet-utils",
  "crates/isis-packet",
  "crates/isis-macros",
  "crates/ospf-packet",
  "crates/ospf-macros",
  "crates/bfd-packet",
  "crates/nd-packet",
  "crates/stamp-packet",
  "crates/fixedbuf",
  "bdd",
  "tools/bgp-bench",
  "tools/pfcp-inject",
]
# The offload/ tree holds XDP/eBPF PoCs built with aya. It is intentionally NOT
# a member of this workspace: building it needs a nightly `bpfel` toolchain +
# bpf-linker that the stable CI gate does not have. Keeping it excluded means
# `cargo {build,clippy,test} --workspace` stays green on stable. Each PoC under
# offload/ is its own self-contained workspace.
exclude = [
  "offload/*",
]

[workspace.package]
version = "26.7.2"
edition = "2024"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.rs>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
prost = "0.14"
rayon = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
clap = { version = "4", features = ["derive"] }

# Workspace-wide clippy configuration. Crates inherit this via
# `[lints] workspace = true` in their own Cargo.toml.
#
# The lints below are opted out because they conflict with this project's
# established style or are not worth the churn for an existing codebase
# (mostly stylistic preferences, network-protocol naming conventions,
# and explicit-over-implicit choices in packet parsers). Other clippy
# lints remain at their default level so genuine issues still surface.
[workspace.lints.clippy]
# Naming — networking acronyms (TCP, IP, MD5, ...) are fine as-is
upper_case_acronyms = "allow"

# Async — fire-and-forget tasks are intentional in a few places
let_underscore_future = "allow"

# Structural — refactoring would change public APIs; leave as-is for now.
result_large_err = "allow"
large_enum_variant = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
