[package]
name = "bdd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow.workspace = true

[dev-dependencies]
rstest = "0.18"
tempfile = "3"
cucumber = { version = "0.21", features = ["output-json"] }
futures = "0.3"

[[test]]
name = "cucumber"
harness = false
