[package]
name = "vtyctl"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true

# MCP server dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build.workspace = true
