[package]
name = "vtyhelper"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower = { version = "0.5", default-features = false, features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
