[package]
name = "zebra-rs"
version.workspace = true
edition.workspace = true

[lints.rust]
unused = "allow"

[dependencies]
anyhow.workspace = true
bytes = "1"
ipnet = "2.9"
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
console-subscriber = "0.4"
libyang = { git = "https://github.com/zebra-rs/libyang" }
#libyang = { path = "../../libyang" }
regex = "1.10"
similar = "2"
dirs = "6"
async-trait = "0.1"
prefix-trie = { git = "https://github.com/zebra-rs/prefix-trie" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
syslog = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
alphanumeric-sort = "1.5.3"
bitflags = "2.6.0"
sysctl = "0.6"
#nanomsg = "0.7.2"
socket2 = "0.5.8"
nix = { version = "0.30", features = ["fs", "net", "socket", "uio", "user"] }
libc = "0.2.167"
#bgp-packet = { path = "../../bgp-packet" }
bgp-packet = { git = "https://github.com/zebra-rs/bgp-packet", branch = "main" }
ospf-packet = { path = "../../ospf-packet" }
#ospf-packet = { git = "https://github.com/zebra-rs/ospf-packet", branch = "main" }
#isis-packet = { path = "../../isis-packet" }
isis-packet = { git = "https://github.com/zebra-rs/isis-packet", branch = "main" }
#spf-rs = { path = "../../spf-rs" }
bitfield-struct = "0.11"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
bit-vec = "0.8.0"
audit = "0.7.3"
daemonize = "0.5"
hex = "0.4.3"
strum = "0.27"
strum_macros = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { git = "https://github.com/zebra-rs/rtnetlink", rev = "2d7b1830e9bd9a049a757f0a79ccd16216450bf2" }
#rtnetlink = { path = "../../rtnetlink" }
netlink-sys = "0.8"
netlink-packet-route = { git = "https://github.com/zebra-rs/netlink-packet-route", branch = "seg6" }
#netlink-packet-route = { path = "../../netlink-packet-route" }
netlink-packet-core = "0.7"
futures = "0.3"
scan_fmt = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.30", features = ["net"] }
ioctl-rs = "0.2.0"
net-route = "0.4.2"

[build-dependencies]
tonic-build.workspace = true
chrono = "0.4"
