[package]
name = "zebra-rs"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

#[profile.release]
#debug = true

[dependencies]
anyhow.workspace = true
bytes = "1"
ipnet = "2.9"
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
console-subscriber = "0.5"
libyang = { git = "https://github.com/zebra-rs/libyang", rev = "e2825a7fd41cce5331a254fe2d8202b0f44dea6a" }
#libyang = { path = "../../libyang" }
regex = "1.10"
similar = "3"
dirs = "6"
async-trait = "0.1"
prefix-trie = "0.8.2"
#prefix-trie = { git = "https://github.com/zebra-rs/prefix-trie" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
syslog = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
alphanumeric-sort = "1.5.3"
bitflags = "2.6.0"
sysctl = "0.7"
#nanomsg = "0.7.2"
socket2 = "0.6"
nix = { version = "0.31", features = ["fs", "net", "socket", "uio", "user"] }
libc = "0.2.167"
bgp-packet = { path = "../crates/bgp-packet" }
bgp-macros = { path = "../crates/bgp-macros" }
ospf-packet = { path = "../crates/ospf-packet" }
ospf-macros = { path = "../crates/ospf-macros" }
isis-packet = { path = "../crates/isis-packet" }
isis-macros = { path = "../crates/isis-macros" }
bfd-packet = { path = "../crates/bfd-packet" }
nd-packet = { path = "../crates/nd-packet" }
bitfield-struct = "0.13"
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
bit-vec = "0.9"
audit = "0.7.3"
daemonize = "0.5"
hex = "0.4.3"
strum = "0.28"
strum_macros = "0.28"
num_enum = "0.7.5"
nanomsg = "0.7.2"
itertools = "0.14.0"
dashmap = "6"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { git = "https://github.com/zebra-rs/rtnetlink", rev = "2d7b1830e9bd9a049a757f0a79ccd16216450bf2" }
#rtnetlink = { path = "../../rtnetlink" }
netlink-sys = "0.8"
netlink-packet-route = { git = "https://github.com/zebra-rs/netlink-packet-route", branch = "seg6" }
netlink-packet-core = "0.7"
futures = "0.3"
scan_fmt = "0.2"
procfs = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["net"] }
ioctl-rs = "0.2.0"
net-route = "0.4.2"

[build-dependencies]
tonic-prost-build.workspace = true
chrono = "0.4"
