[package]
name = "zebra-rs"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

#[profile.release]
#debug = true

[dependencies]
ahash = "0.8"
anyhow.workspace = true
bytes = "1"
mimalloc = "0.1"
ipnet = "2.9"
prost.workspace = true
rayon.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
# For dialing the cradle tee over a Linux abstract Unix socket (tonic's
# built-in UDS connector is filesystem-path only). Mirrors vtyhelper.
tower = { version = "0.5", default-features = false, features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
console-subscriber = "0.5"
libyang = "1"
#libyang = { git = "https://github.com/zebra-rs/libyang", rev = "103b60c2d560a91d37fa26502eb3d495db1cdb99" }
#libyang = { path = "../../libyang" }
regex = "1.10"
similar = "3"
dirs = "6"
async-trait = "0.1"
prefix-trie = "0.9.2"
#prefix-trie = { git = "https://github.com/zebra-rs/prefix-trie" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
syslog = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
marked-yaml = "0.7"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
alphanumeric-sort = "1.5.3"
bitflags = "2.6.0"
sysctl = "0.7"
socket2 = "0.6"
nix = { version = "0.31", features = ["fs", "net", "socket", "uio", "user"] }
libc = "0.2.167"
bgp-packet = { path = "../crates/bgp-packet" }
bgp-macros = { path = "../crates/bgp-macros" }
ospf-packet = { path = "../crates/ospf-packet" }
ospf-macros = { path = "../crates/ospf-macros" }
isis-packet = { path = "../crates/isis-packet" }
isis-macros = { path = "../crates/isis-macros" }
packet-utils = { path = "../crates/packet-utils" }
bfd-packet = { path = "../crates/bfd-packet" }
nd-packet = { path = "../crates/nd-packet" }
stamp-packet = { path = "../crates/stamp-packet" }
bitfield-struct = "0.13"
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
bit-vec = "0.9"
audit = "0.7.3"
daemonize = "0.5"
hex = "0.4.3"
strum = "0.28"
strum_macros = "0.28"
num_enum = "0.7.5"
itertools = "0.14.0"
dashmap = "6"
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
rs-pfcp = "0.3.1"
# Embedded Lua scripting engine, gated behind the `lua` feature.
# `vendored` bundles the Lua 5.4 interpreter so the build stays hermetic
# (no system liblua) — it does need a C compiler at build time.
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }

[features]
# `lua` is DISABLED by default for now: stock builds (and the BDD binary)
# ship WITHOUT the embedded scripting engine, and the hooks compile to
# no-ops via their `#[cfg(not(feature = "lua"))]` stubs. Re-enable the
# scripting engine with `--features lua` (that build is guarded by the
# `lua` CI lane so the optional code keeps compiling).
default = []
# Compile the embedded Lua scripting engine (src/script).
lua = ["dep:mlua"]

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { git = "https://github.com/zebra-rs/rtnetlink", rev = "2d7b1830e9bd9a049a757f0a79ccd16216450bf2" }
#rtnetlink = { path = "../../rtnetlink" }
netlink-sys = "0.8"
netlink-packet-route = { git = "https://github.com/zebra-rs/netlink-packet-route", branch = "seg6" }
netlink-packet-core = "0.7"
# Matches the version netlink-packet-route (seg6) pins, so DefaultNla
# unifies — used to emit kernel bridge MDB SET entries (EVPN SMET).
netlink-packet-utils = "0.5.2"
futures = "0.3"
scan_fmt = "0.2"
procfs = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["net"] }
ioctl-rs = "0.2.0"
net-route = "0.4.2"

[build-dependencies]
tonic-prost-build.workspace = true
chrono = "0.4"
