[package]
name = "zebra"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1"
ipnet = "2.9"
nom = "7"
nom-derive = "0.10"
rusticata-macros = "4"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.9"
libyang = { git = "https://github.com/zebra-rs/libyang" }
regex = "1.10"
similar = "2"
dirs = "5"
async-trait = "0.1"
prefix-trie = "0.3"

[target.'cfg(linux)'.dependencies]
rtnetlink = "0.14"
netlink-sys = "0.8.6"
netlink-packet-route = "0.19.0"
netlink-packet-core = "0.7.0"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.9"
