[package]
name = "zebra"
version = "0.6.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1"
ipnet = "2.9"
nom = "7"
nom-derive = "0.10"
rusticata-macros = "4"
prost = "0.13"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = "0.1"
tonic = "0.12"
console-subscriber = "0.1.5"
libyang = { git = "https://github.com/zebra-rs/libyang" }
regex = "1.10"
similar = "2"
dirs = "5"
async-trait = "0.1"
prefix-trie = { git = "https://github.com/zebra-rs/prefix-trie" }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
alphanumeric-sort = "1.5.3"
bitflags = "2.6.0"
sysctl = "0.5.5"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { git = "https://github.com/zebra-rs/rtnetlink", branch = "seg6" }
netlink-sys = "0.8"
netlink-packet-route = { git = "https://github.com/zebra-rs/netlink-packet-route", branch = "seg6" }
netlink-packet-core = "0.7"
futures = "0.3"
scan_fmt = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["net"] }
ioctl-rs = "0.2.0"
net-route = "0.4.2"

[build-dependencies]
tonic-build = "0.12"
