[package]
name = "zmcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server for Zebra routing daemon"
license.workspace = true

[[bin]]
name = "zmcp-server"
path = "src/main.rs"

[dependencies]
# Basic JSON-RPC for MCP protocol implementation
futures = "0.3"

# Async runtime and utilities
tokio.workspace = true
tokio-stream.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC client (reuse from cli-helper)
tonic.workspace = true
prost.workspace = true

# CLI parsing
clap.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
assert_matches = "1.5"
mockall = "0.13"