[package]
name = "bgp-packet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser for the BGP protocol"

[dependencies]
bitfield-struct = "0.13"
bitflags = "2.6.0"
byteorder = "1.5"
bytes = "1.9"
fixedbuf = { path = "../fixedbuf" }
packet-utils = { path = "../packet-utils" }
ipnet = { version = "2.10", features = ["serde"] }
itertools = "0.14.0"
nom = "8"
nom-derive = { git = "https://github.com/rust-bakery/nom-derive", branch = "master" }
num_enum = "0.7.5"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.28"
strum_macros = "0.28"
thiserror = "2"

[dev-dependencies]
hex-literal = "1.0"

[lints]
workspace = true
