[package]
name = "nd-packet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser and encoder for IPv6 Neighbor Discovery (RFC 4861) Router Advertisement / Router Solicitation packets"

[dependencies]
bitflags = "2.6.0"
bytes = "1.9"

[dev-dependencies]
hex-literal = "1.0"

[lints]
workspace = true
