[package]
name = "ospf-packet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Parser for the OSPFv2 and OSPFv3 protocol"

[dependencies]
packet-utils = { path = "../packet-utils" }
bitfield-struct = "0.13"
byteorder = "1.5"
bytes = "1.9"
fletcher = "1.0.0"
internet-checksum = "0.2.1"
ipnet = "2.10"
nom = "8"
nom-derive = { git = "https://github.com/rust-bakery/nom-derive", branch = "master" }

[dev-dependencies]
hex-literal = "1.0"

[lints]
workspace = true
