[package]
name = "packet-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common utilities for protocol packet parsing"

[dependencies]
bitfield-struct = "0.11"
byteorder = "1.5"
bytes = "1.9"
fletcher = "1.0.0"
hex = "0.4.3"
ipnet = { version = "2.10", features = ["serde"] }
itertools = "0.14.0"
nom = "8"
nom-derive = { git = "https://github.com/rust-bakery/nom-derive", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "1.0"

[dev-dependencies]
hex-literal = "1.0"

[lints]
workspace = true
