[package]
name = "tc-evpn-replicate-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aya-ebpf = { workspace = true }

[build-dependencies]
# Build fails fast with a clear error if bpf-linker is not on $PATH.
which = { workspace = true }

[[bin]]
name = "tc-evpn-replicate"
path = "src/main.rs"

# No `[profile]` here: the eBPF object is built by the loader's build.rs via
# aya-build, which applies the `[profile.release.package.*]` settings declared in
# the workspace root manifest.
