[package]
name = "xdp-bfd-echo"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "io-util",
    "io-std",
] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# Declared so cargo tracks the eBPF crate for cache invalidation. It is actually
# compiled for `bpfel-unknown-none` by build.rs (aya-build), not as a normal
# host build-dependency — see the aya-template for the rationale.
xdp-bfd-echo-ebpf = { path = "../ebpf" }

[[bin]]
name = "xdp-bfd-echo"
path = "src/main.rs"
